k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: i27-ui
  labels:
    app: i27-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: i27-ui
  template:
    metadata:
      labels:
        app: i27-ui
    spec:
      containers:
        - name: i27-ui
          image: ${IMAGE}   # substituted by envsubst in CI, e.g. devopswithcloudhub/i27helpdesk-ui:dev-<git-sha>
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          # envFrom:
          #   - secretRef:
          #       name: i27-ui-env
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
          # resources:
          #   requests:
          #     cpu: 100m
          #     memory: 256Mi
          #   limits:
          #     cpu: 500m
          #     memory: 512Mi
