k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: i27-ui
  labels:
    app: i27-ui
spec:
  type: LoadBalancer
  selector:
    app: i27-ui
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: i27-ui-clusterip
  labels:
    app: i27-ui
spec:
  type: ClusterIP
  selector:
    app: i27-ui
  ports:
    - name: http
      port: 80
      targetPort: 3000
